<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
Copyright (C) 2011 Michal Harakal and Michael Kroez

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS-IS" BASIS
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
        
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Wheelmap</string>
    <string name="description_logo">Wheelmap</string>
    <string name="description_map">Map</string>
    <string name="description_filter">Filter</string>
    <string name="description_gps">Current location</string>
    <string name="description_edit">Edit</string>
    <string name="new_default_name">New POI</string>
    <string name="title_pois_list">List</string>
    <string name="title_pois_map">Map</string>
    <string name="title_pois_settings">Filter Settings</string>
    <string name="title_pois_detail">Info</string>
    <string name="title_wheelchair_state">Wheelchair Settings</string>
    <string name="edit_poi">Edit</string>
    <string name="btn_list">List</string>
    <string name="no_pois">no places found according your filter settings</string>
    <string name="settings_wheelchair_state">Wheelchair State</string>
    <!-- wheelchair texts  - english version from the english website (see selector hovertext) -->
    <string name="poi_property_name">Name</string>
    <string name="poi_property_comment">Comment</string>
    <string name="poi_property_address">Address</string>
    <string name="poi_property_phone">Phone</string>
    <string name="poi_property_website">Website</string>
    <string name="poi_property_position">Position</string>
    <string name="poi_property_nodetype">Type</string>
    <string name="poi_property_category">Category</string>
    <string name="title_please_wait">Please wait</string>
    <string name="title_category_select">Select Categories to display</string>
    <string name="settings_category_filter">Category Filter</string>
    <string name="settings_wheelchair_no_accessible">No</string>
    <string name="settings_wheelchair_limited_accessible">Limited</string>
    <string name="settings_wheelchair_full_accessible">Yes</string>
    <string name="title_info">Credits</string>
    <string name="info_a_project_of">a project of</string>
    <string name="info_web_version">Web-Version:</string>
    <string name="stiftung_text_one">Thanks to Fürst Donnersmarck-Stiftung</string>
    <string name="info_kartendaten">Mapdata:</string>
    <string name="info_android_development">Android Development:</string>
    <string name="info_icons">Icons:</string>
    <string name="info_webdevelopment">Web Development:</string>
    <string name="info_android_development_two">Michael Kröz</string>
    <string name="info_android_development_one">Michal Harakaľ</string>
    <string name="error_network_failure">Network unstable. Please check your internet connection or try again later.</string>
    <string name="error_internal_error">An unexpected internal error occurred. Please restart the app.</string>
    <string name="error_authorization_error">Email or password was wrong. Sorry. Can\'t log you in.</string>
    <string name="error_occurred">An error occurred</string>
    <string name="info_webdevelopment_one">Christoph Bünte</string>
    <string name="info_kartendaten_one">www.openstreetmap.org</string>
    <string name="info_kartendaten_two">© OpenStreetMap contributors, CC-BY-SA</string>
    <string name="info_web_version_one">www.wheelmap.org</string>
    <string name="title_wheelchairstate">Wheelchair accessible?</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="okay">Okay</string>
    <string name="error_network_title">Network issue</string>
    <string name="btn_legal_notice">Legal Notice</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="support_nodetype_unknown">Type Unknown</string>
    <string name="quit">Quit</string>
    <string name="support_category_unknown">Category Unknown</string>
    <string name="title_legal_notice">Legal Notice</string>
    <string name="legal_notice_mapsforge">Mapsforge</string>
    <string name="legal_notice_mapsforge_copyright">© http://mapsforge.org (LGPL V3)</string>
    <string name="legal_notice_pulltorefresh_copyright">© Johan Nilsson (Apache License V2)</string>
    <string name="legal_notice_pulltorefresh">PullToRefresh Widget</string>
    <string name="legal_notice_springandroid">Spring Android</string>
    <string name="legal_notice_springandroid_copyright">© Spring Framework Project</string>
    <string name="legal_notice_springandroid_copyright_two">(Apache License V2)</string>
    <string name="legal_notice_springandroid_copyright_three">http://www.springframework.org</string>
    <string name="legal_notice_jackson">Jackson JSON Processor</string>
    <string name="legal_notice_jackson_copyright">(Apache License V2)</string>
    <string name="legal_notice_commonsware">Two Modules</string>
    <string name="legal_notice_commonsware_copyright">© CommonsWare LLC</string>
    <string name="legal_notice_iconscollection">Map Icons Collection</string>
    <string name="legal_notice_iconscollection_copyright_two">(CC BY-SA 3.0)</string>
    <string name="legal_notice_opensource">This Software is Open Source</string>
    <string name="legal_notice_opensource_copyright">https://github.com/sozialhelden/wheelmap-android</string>
    <string name="legal_notice_opensource_copyright_one">(Apache License V2)</string>
    <string name="legal_notice_iconscollection_copyright">© http://mapicons.nicolasmollet.com</string>
    <string name="legal_notice_intro">This Software is based on other works. Their copyright is as follows:</string>
    <string name="legal_notice_commonsware_copyright_two">(Apache License V2)</string>
    <string name="ws_enabled">Yes: Entrance without steps, all rooms without steps, accessible toilet</string>
    <string name="ws_limited">Limited: Entry has a step (max. height 7cm), most rooms are stepless, toilet not accessible</string>
    <string name="ws_disabled">No: Entry has high or several steps, rooms not accessible</string>
    <string name="ws_unknown">Unknown: Help us and mark this location.</string>
    <string name="ws_unknown_title">Unknown Status</string>
    <string name="ws_limited_title">Partly wheelchair accessible</string>
    <string name="ws_disabled_title">Not wheelchair accessible</string>
    <string name="ws_enabled_title">Wheelchair accessible</string>
    <string name="error_not_osm_connected">Your wheelmap account is not connected to openstreetmap</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Login</string>
    <string name="title_login">Login</string>
    <string name="error_authorization_required">Authorization required</string>
    <string name="error_request_forbidden">Request forbidden</string>
    <string name="search_hint_map">Pick map part and keyword</string>
    <string name="search_hint_list">Keyword (optional)</string>
    <string name="info_clientdevelopment">Android API Client</string>
    <string name="info_clientdevelopment_one">Pat Lipp</string>
    <string name="title_search">Search</string>
    <string name="search_no_selection">All</string>
    <string name="search_pick_category">Pick a (sub)category</string>
    <string name="search_execute">Search</string>
    <string name="settings_delete_logindata">Delete Email and Password</string>
    <string name="title_pois_detail_edit">Edit the point of interest</string>
    <string name="title_pois_position_edit">Location Positioning</string>
    <string name="latitude_short">Lat</string>
    <string name="position_longitude_short">Long</string>
    <string name="position_latitude_short">Lat</string>
    <string name="search_distance">Distance in km</string>
    <string name="search_distance_unspecified">Whatever</string>
    <string name="settings_wheelchair_unknown_accessible">Unknown</string>
    <string name="settings_wheelchair_unspecified_accessible">All</string>
    <string name="error_not_enough_memory">Your phone does not provide enough memory for this application. Sorry.</string>
    <string name="login_info">Please login</string>
    <string name="search_info">Search</string>
    <string name="title_nodetype_edit">Pick a Type</string>
    <string name="title_share_using">Share Using</string>
    <string name="title_view_using">View using</string>
    <string name="title_pois_detail_activity">Wheelmap Detail</string>
</resources>
