<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/home_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout style="@style/ActionBarCompat">
		<ImageView style="@style/TitleBarLogo" android:src="@drawable/title_logo"
			android:padding="3dip" />
	</LinearLayout>
	<LinearLayout android:id="@+id/title_bar_text" style="@style/ActionBarSwitcher">
		<TextView android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:gravity="center"
			android:text="@string/title_info" android:textColor="@color/white"
			android:textStyle="bold" />
	</LinearLayout>

	<ScrollView android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">


			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:orientation="vertical"
				android:paddingTop="6dip" android:paddingBottom="6dip">

				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/info_kartendaten"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold" android:paddingLeft="12dip"
					android:paddingRight="12dip" android:paddingTop="5dip"
					android:paddingBottom="5dip" />

				<TextView android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:text="@string/info_kartendaten_one"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold" android:gravity="center"
					android:paddingTop="5dip" android:paddingBottom="5dip" />

				<ImageView android:layout_height="2dip"
					android:layout_width="fill_parent" android:background="@color/light_grey_two" />
				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/info_android_development"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold" android:paddingLeft="12dip"
					android:paddingRight="12dip" android:paddingTop="5dip" />
				<TextView android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:text="@string/info_android_development_one"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold" android:gravity="center"
					android:paddingTop="5dip" android:paddingBottom="5dip" />

				<TextView android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:text="@string/info_android_development_two"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold" android:gravity="center" />

				<ImageView android:layout_height="2dip"
					android:layout_width="fill_parent" android:background="@color/light_grey_two" />

				<TextView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/info_webdevelopment"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold" android:paddingLeft="12dip"
					android:paddingRight="12dip" android:paddingTop="5dip"
					android:paddingBottom="5dip" />
				<TextView android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:text="@string/info_webdevelopment_one"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold" android:gravity="center"
					android:paddingTop="5dip" android:paddingBottom="5dip" />
				<ImageView android:layout_height="2dip"
					android:layout_width="fill_parent" android:background="@color/light_grey_two" />

				<!-- <TextView android:layout_height="wrap_content" -->
				<!-- android:layout_width="wrap_content" android:text="@string/info_icons" -->
				<!-- android:textAppearance="?android:attr/textAppearanceLarge" -->
				<!-- android:textStyle="bold" android:paddingLeft="12dip" -->
				<!-- android:paddingRight="12dip" /> -->
				<!-- <ImageView android:layout_height="2dip" -->
				<!-- android:layout_width="fill_parent" android:background="@color/light_grey_two" 
					/> -->

				<LinearLayout android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:orientation="horizontal"
					android:layout_marginLeft="6dip" android:layout_marginRight="6dip"
					android:layout_gravity="center_horizontal">
					<TextView android:layout_width="wrap_content"
						android:layout_height="fill_parent" android:text="@string/info_a_project_of"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:textStyle="bold" android:textColor="@color/red_logo"
						android:gravity="center_vertical" android:paddingTop="9dip"
						android:layout_marginRight="5dip" />
					<ImageView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:src="@drawable/logo_sozialhelden_232x47" />
				</LinearLayout>
				<LinearLayout android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:orientation="horizontal"
					android:layout_marginTop="12dip" android:layout_marginLeft="6dip"
					android:layout_marginRight="6dip" android:layout_gravity="center_horizontal">
					<TextView android:layout_width="wrap_content"
						android:layout_height="fill_parent" android:text="@string/info_reserved_sozialhelden"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:textStyle="" android:textColor="@color/red_logo"
						android:gravity="center_vertical" android:paddingTop="6dip" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
